<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_gravity="bottom"
    android:baselineAligned="false"
    android:gravity="center"
    android:elevation="5dp"
    android:background="@color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btn_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <com.pemchip.blablacar.common.CustomFontIcon
                android:id="@+id/icon_home"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/icon_home"
                android:textColor="@color/text_color_tertiary" />

            <TextView
                android:id="@+id/label_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:padding="2dp"
                android:textColor="@color/text_color_tertiary"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <com.pemchip.blablacar.common.CustomFontIcon
                android:id="@+id/icon_employee"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/icon_trip"
                android:textStyle="bold"
                android:textColor="@color/teal_700" />

            <TextView
                android:id="@+id/label_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="History"
                android:textColor="@color/teal_700"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <com.pemchip.blablacar.common.CustomFontIcon
                android:id="@+id/icon_customer"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:gravity="center|bottom"
                android:text="@string/icon_user"
                android:textColor="@color/text_color_tertiary" />

            <TextView
                android:id="@+id/label_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textStyle="bold"
                android:text="Profile"
                android:textColor="@color/text_color_tertiary"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>