<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7F7FE"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ridepost"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userAvatarTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Post a Ride"
            android:layout_marginTop="24dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="18dp"
                        android:src="@drawable/from_rounded_bg" />

                    <TextView
                        android:id="@+id/fromAddress"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_marginRight="18dp"
                        android:background="@drawable/input"
                        android:text="Leaving From"
                        android:textSize="16sp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:padding="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="18dp"
                        android:src="@drawable/to_rounded_bg" />

                    <TextView
                        android:id="@+id/toAddress"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_marginRight="18dp"
                        android:background="@drawable/input"
                        android:text="Going To"
                        android:textSize="16sp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:padding="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="18dp"
                        android:src="@drawable/calendar"
                        android:tint="@color/text_color_tertiary"
                        tools:ignore="UseAppTint" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_marginRight="18dp"
                        android:background="@drawable/input"
                        android:text="Journy Date"
                        android:textSize="16sp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:padding="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <com.pemchip.blablacar.common.CustomFontIcon
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="18dp"
                        android:layout_centerVertical="true"
                        android:text="@string/icon_time"
                        android:textColor="@color/text_color_tertiary" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_marginRight="18dp"
                        android:background="@drawable/input"
                        android:text="Journy Time"
                        android:textSize="16sp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:padding="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="18dp"
                        android:src="@drawable/person"
                        android:tint="@color/text_color_tertiary"
                        tools:ignore="UseAppTint" />

                    <TextView
                        android:id="@+id/passenger"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_marginRight="18dp"
                        android:background="@drawable/input"
                        android:text="Passenger"
                        android:textSize="16sp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:padding="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <com.pemchip.blablacar.common.CustomFontIcon
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="18dp"
                        android:layout_centerVertical="true"
                        android:text="@string/icon_currency"
                        android:textColor="@color/text_color_tertiary" />

                    <EditText
                        android:id="@+id/amount"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_marginRight="18dp"
                        android:background="@drawable/input"
                        android:hint="Amount"
                        android:textSize="16sp"
                        android:digits="0123456789"
                        android:inputType="number"
                        android:padding="10dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <com.pemchip.blablacar.common.CustomFontIcon
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="18dp"
                        android:layout_centerVertical="true"
                        android:text="@string/icon_car"
                        android:textColor="@color/text_color_tertiary" />

                    <EditText
                        android:id="@+id/carNumber"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="48dp"
                        android:layout_marginRight="18dp"
                        android:textSize="16sp"
                        android:background="@drawable/input"
                        android:hint="Car name, number"
                        android:padding="10dp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/searchBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:background="@drawable/login_btn"
                    android:text="Publish a Ride"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="54dp"
        layout="@layout/footer_home"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:id="@+id/hld_success_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/success_screen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="Ride posted successfully"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:layout_marginTop="12dp"
                android:indeterminateTint="@color/teal_700"
                android:visibility="visible" />


        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>